crates/ryft-macros-tests/tests/parameters/error_self.stderr
error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:28:15
   |
28 |     _f4: [(); Self::ASSOC],
   |               ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:29:15
   |
29 |     _f5: [(); Self::assoc()],
   |               ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:23:10
   |
23 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ cannot perform const operation using `__P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:44:77
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                             ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:44:96
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                                                ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:43:10
   |
43 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ cannot perform const operation using `__P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:63:19
   |
63 |         _f4: [(); Self::ASSOC],
   |                   ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:64:19
   |
64 |         _f5: [(); Self::assoc()],
   |                   ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:66:56
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                        ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:66:75
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                                           ^^^^ cannot perform const operation using `P`
   |
   = note: type parameters may not be used in const expressions

error: generic parameters may not be used in const operations
  --> tests/parameters/error_self.rs:57:10
   |
57 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ cannot perform const operation using `__P`
   |
   = note: type parameters may not be used in const expressions

error[E0425]: cannot find type `P` in this scope
  --> tests/parameters/error_self.rs:10:52
   |
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                                   -                ^^^^ help: a type parameter with a similar name exists: `T`
   |                                   |
   |                                   similarly named type parameter `T` defined here

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == Generics<Placeholder, T>`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected `Generics<Placeholder, T>`, found `Generics<P, T>`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found this type parameter
   |
   = note: expected struct `Generics<Placeholder, T>`
              found struct `Generics<P, T>`
note: required for `Generics<Placeholder, T>` to implement `Trait`
  --> tests/parameters/error_self.rs:19:44
   |
19 | impl<P: Parameter, T: Trait<Assoc = Self>> Trait for Generics<P, T> {
   |                             ------------   ^^^^^     ^^^^^^^^^^^^^^
   |                             |
   |                             unsatisfied trait bound introduced here
note: required for `Generics<Placeholder, T>` to implement `ParameterizedFamily<Placeholder>`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^
...
13 |     <Self as Trait>::Assoc: Sized,
   |                             ----- unsatisfied trait bound introduced in this `derive` macro
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:28:15
   |
28 |     _f4: [(); Self::ASSOC],
   |               ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:29:15
   |
29 |     _f5: [(); Self::assoc()],
   |               ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:44:77
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                             ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:44:96
   |
44 | pub struct Tuple<P: Parameter>(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]);
   |                                                                                                ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:63:19
   |
63 |         _f4: [(); Self::ASSOC],
   |                   ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:64:19
   |
64 |         _f5: [(); Self::assoc()],
   |                   ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:66:56
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                        ^^^^

error: generic `Self` types are currently not permitted in anonymous constants
  --> tests/parameters/error_self.rs:66:75
   |
66 |     Tuple(Box<Self>, Box<<Self as Trait>::Assoc>, [(); Self::ASSOC], [(); Self::assoc()]),
   |                                                                           ^^^^

error[E0271]: type mismatch resolving `<T as Trait>::Assoc == Generics<Placeholder, T>`
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected `Generics<Placeholder, T>`, found `Generics<P, T>`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found this type parameter
   |
   = note: expected struct `Generics<Placeholder, T>`
              found struct `Generics<P, T>`
note: required by a bound in `Generics`
  --> tests/parameters/error_self.rs:10:44
   |
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                                            ^^^^^^^^^^^^ required by this bound in `Generics`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^ expected type parameter `P`, found `Placeholder`
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - expected this type parameter
   |
   = note: expected type parameter `P`
                      found struct `Placeholder`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> tests/parameters/error_self.rs:9:10
   |
 9 | #[derive(Parameterized)]
   |          ^^^^^^^^^^^^^
   |          |
   |          expected `Generics<Placeholder, T>`, found `Generics<P, T>`
   |          expected `Generics<Placeholder, T>` because of return type
10 | pub struct Generics<P: Parameter, T: Trait<Assoc = Self>>
   |                     - found this type parameter
   |
   = note: expected struct `Generics<Placeholder, T>`
              found struct `Generics<P, T>`
   = note: this error originates in the derive macro `Parameterized` (in Nightly builds, run with -Z macro-backtrace for more info)
